llvm-toolchain-6.0 (1:6.0.1-12) UNRELEASED; urgency=medium

  * For now, lld doesn't generate shared libs. Removing the files
    (Closes: #857653, LP: #1829677)

 -- Andreas Beckmann <anbe@debian.org>  Sat, 11 May 2019 17:19:32 +0200

llvm-toolchain-6.0 (1:6.0.1-11) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Remove 'Multi-Arch: same' in libclang (Closes: #874248)
  * Cherry-pick various llvm fixes for Julia (Closes: #919628)

  [ Mo Zhou ]
  * Rebase and enable D51639-optim-issue.diff .
  * Remove install-lldb-sb-headers.patch, merged upstream.
  * Remove empty file: bug-30342.diff
  * Remove deprecated patch: fix-lldb-server-build. (See 602ceb9ec)

 -- Mo Zhou <cdluminate@gmail.com>  Sat, 09 Mar 2019 06:10:15 +0000

llvm-toolchain-6.0 (1:6.0.1-10) unstable; urgency=medium

  * Fix a baseline violation on armhf (Closes: #914268)
    Thanks to Adrian Bunk
    doing that for the Julia package.

  [ John Paul Adrian Glaubitz ]
  * Add patch to fix missing include and library paths on x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 23 Jan 2019 23:25:50 +0100

llvm-toolchain-6.0 (1:6.0.1-9.2) unstable; urgency=medium

  * Non-maintainer upload.
  * debian/patches/D53557-hurd-self-exe-realpath.diff: Fix paths returned by
    llvm-config (Closes: Bug#911817).

 -- Samuel Thibault <sthibault@debian.org>  Wed, 24 Oct 2018 22:44:54 +0000

llvm-toolchain-6.0 (1:6.0.1-9.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Apply hurd fixes (Closes: #908847).
    - hurd-lib_Support_Unix_Path.inc.diff
    - hurd-pathmax.diff
    - hurd-tools_llvm-shlib_CMakeLists.txt.diff

 -- Samuel Thibault <sthibault@debian.org>  Tue, 16 Oct 2018 20:18:39 +0000

llvm-toolchain-6.0 (1:6.0.1-9) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Add patch to fix missing MultiArch include dir
    on powerpcspe (Closes: #908791)

  [ Gianfranco Costamagna ]
  * Force polly cmake removal on arch:all because of --fail-missing
