@@ -5,7 +5,7 @@ Maintainer: LLVM Packaging Team <pkg-llvm-team@lists.alioth.debian.org>
 Uploaders: Sylvestre Ledru <sylvestre@debian.org>
 Build-Depends: debhelper (>= 9.0), cmake, chrpath, texinfo, sharutils,
     libffi-dev (>= 3.0.9),
-    lsb-release, patchutils, diffstat, xz-utils, python-dev,
+    lsb-release, patchutils, diffstat, xz-utils, python2-dev,
     libedit-dev, libncurses5-dev, swig, python-six, python-sphinx, binutils-dev,
     libjsoncpp-dev, pkg-config,
     lcov, procps, help2man, zlib1g-dev,
@@ -29,7 +29,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, ${dep:devlibs},
  ${dep:devlibs-objc}, libclang-common-6.0-dev (= ${binary:Version}),
  libclang1-6.0 (= ${binary:Version}), libc6-dev, binutils
 Provides: c-compiler, objc-compiler, c++-compiler
-Recommends: llvm-6.0-dev, python, libomp-dev
+Recommends: llvm-6.0-dev, python2, libomp-dev
 Suggests: gnustep, gnustep-devel, clang-6.0-doc
 Description: C, C++ and Objective-C compiler
  Clang project is a C, C++, Objective C and Objective C++ front-end
@@ -55,7 +55,7 @@ Description: clang-based tools for C/C++ developments
 
 Package: clang-format-6.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python,
+Depends: ${shlibs:Depends}, ${misc:Depends}, python2,
  libllvm6.0 (= ${binary:Version})
 Description: Tool to format C/C++/Obj-C code
  Clang-format is both a library and a stand-alone tool with the goal of
@@ -71,7 +71,7 @@ Description: Tool to format C/C++/Obj-C code
 
 Package: clang-tidy-6.0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python,
+Depends: ${shlibs:Depends}, ${misc:Depends}, python2,
  libllvm6.0 (= ${binary:Version}), libclang-common-6.0-dev,
  clang-tools-6.0, python-yaml
 Replaces: clang-modernize-6.0, clang-6.0 (<< 1:6.0~svn250696-1)
@@ -174,7 +174,7 @@ Description: Library for coverage-guided fuzz testing
 Package: python-clang-6.0
 Section: python
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python
+Depends: ${shlibs:Depends}, ${misc:Depends}, python2
 Replaces: python-clang-3.8, python-clang-3.9, python-clang-x.y
 Breaks: python-clang-3.8, python-clang-3.9
 Conflicts: python-clang-x.y
@@ -293,7 +293,7 @@ Description: Modular compiler and toolchain technologies, libraries and headers
 
 Package: llvm-6.0-tools
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python,
+Depends: ${shlibs:Depends}, ${misc:Depends}, python2,
  llvm-6.0-dev (= ${binary:Version})
 Description: Modular compiler and toolchain technologies, tools
  LLVM is a collection of libraries and tools that make it easy to build
@@ -445,7 +445,7 @@ Package: python-lldb-6.0
 Section: python
 Architecture: amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el kfreebsd-amd64 kfreebsd-i386 s390 sparc hppa m68k sh4 x32
 # ia64 hurd powerpc powerpcspe ppc64 alpha s390x sparc64 have been removed
-Depends: ${shlibs:Depends}, ${misc:Depends}, liblldb-6.0-dev, python, python-six
+Depends: ${shlibs:Depends}, ${misc:Depends}, liblldb-6.0-dev, python2, python-six
 Conflicts: python-lldb-3.8, python-lldb-3.9, python-lldb-x.y
 Replaces: python-lldb-x.y
 Provides: python-lldb-x.y
